add h2 element from example

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,6 @@ body{
     background-color: lightgray;
     background-image: url(../images/01-02-02_background-img.jpg);
 }
+h2{
+    color: orangered;
+}
